fix overflow in projects section

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -26,15 +26,13 @@
   width: 100% \9;
 }
 
-
-
 .text {
   position: absolute;
   padding: 0;
   color: #fff;
   // background: rgba(0,0,0,0.95);
   width: 100%;
-  height: 80%;
+  height: 100% ;
   top: 0;
   left: 0;
   opacity: 0;
@@ -43,7 +41,7 @@
   filter: alpha(opacity=0);
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
-
+  overflow-x: hidden;
 }
 
 .text h2 {
@@ -54,7 +52,7 @@
   margin-top: -50px;
   padding: 10px;
   font-size: 26px;
-  line-height: 34px;
+  // line-height: 34px;
   font-weight: 300;
   text-align: center;
   // opacity: 0;
@@ -63,6 +61,7 @@
   transform: translateY(100px);
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
+
 }
 
 .text p {
